// Copyright (c) 2020 IoTeX
// This is an alpha (internal) release and is not suitable for production. This source code is provided 'as is' and no
// warranties are given as to title or non-infringement, merchantability or fitness for purpose and, to the extent
// permitted by law, all liability for your use of the code is disclaimed. This source code is governed by Apache
// License 2.0 that can be found in the LICENSE file.

// To compile the proto, run:
//      protoc --go_out=plugins=grpc:. *.proto

syntax ="proto3";
package unproductivedelegatepb;

message unproductiveDelegate{
	uint64 cacheSize = 1;
	uint64 probationPeriod = 2;
	repeated delegatelist delegateList = 3;
}

message delegatelist{
	repeated string delegates = 1;
}